# cogmem

./: .gitignore  LICENSE  README.md  cogmem.yaml.example  pyproject.toml
cli/: __init__.py  main.py
cli/commands/: __init__.py  agent_cmd.py  init_cmd.py  maintain_cmd.py  run_cmd.py  team_cmd.py
database/: db.py  migrate.py  schema.sql  schema_swarm_v2.sql
database/migrations/: 001_initial.sql
docker/: docker-compose.yml
harness/: __init__.py  claude_engine.py  engine.py  lifecycle.py  registry.py
harness/tools/: __init__.py  mcp_server.py  memory_tools.py
memory/: AGENTS.md  ARCHITECTURE.md  TESTING.md  __init__.py  affect_system.py  auto_memory_hook.py  auto_rejection_logger.py  co_curiosity_export.py  config.py  contact_context.py  contradiction_detector.py  counterfactual_engine.py  curiosity_engine.py  db_adapter.py  entity_detection.py  entity_index.py  episodic_db.py  event_logger.py  inner_monologue.py  llm_client.py  memory_common.py  memory_manager.py  memory_store.py  merkle_attestation.py  migrate_council_schemas.py  post_multigraph.py  semantic_search.py  toolkit.py  transcript_processor.py.spin_backup  workspace_manager.py
memory/procedural/: chunk_loader.py  memory-architecture-v2.md  moltbook-operations.md  twitter-engagement.md
scripts/: health_check.py  init_db.py
teams/: __init__.py  base.py  roundtable.py
tests/: conftest.py  test_cli.py  test_config.py  test_cross_session.py  test_engines.py  test_imports.py  test_lifecycle.py  test_memory_tools.py  test_registry.py  test_roundtable.py  test_tool_registry.py
(+3 files in other folders)
