[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogmem"
version = "0.1.0"
description = "Biologically-grounded cognitive memory system for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Drift + Lex", email = "driftcornwall69420@gmail.com"},
]
keywords = ["ai", "agents", "memory", "cognitive-architecture", "identity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "psycopg2-binary>=2.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
all = ["openai>=1.0.0", "requests>=2.28.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
cogmem = "memory.toolkit:main"

[project.urls]
Homepage = "https://github.com/driftcornwall/cogmem"
Documentation = "https://github.com/driftcornwall/cogmem"
Repository = "https://github.com/driftcornwall/cogmem"

[tool.setuptools.packages.find]
include = ["memory*", "database*", "scripts*", "harness*"]

[tool.setuptools.package-data]
database = ["schema.sql", "schema_swarm_v2.sql"]
memory = ["procedural/chunks/*.json"]
